- added wxEncodingConverter and improved wxFontMapper
  for dealing with convertions between different encodings,
  charsets support in wxLocale and wxHTML

wxMSW:

- wxFrame::MakeFullScreen added.
- support for enhanced metafiles added, support for copying/pasting metafiles
  (WMF and enhanced ones) fixed/added.
- implemented setting colours for push buttons
- wxTreeCtrl::IsVisible() bug fixed (thanks to Gary Chessun)
- loading/saving big (> 32K) files in wxTextCtrl works
- tooltips work with wxRadioBox
- wxBitmap/wxIcon may be constructed from XPM included into a program, as in
  Unix ports
- returning FALSE from OnPrintPage() aborts printing

wxGTK:

- wxFontMapper endless recursion bug (on some systems) fixed
- wxGTK synthesizes wxActivateEvents
- UpdateUI handlers may be used with wxTextCtrl

wxMotif:

- wxMenu::Enable works

wxHTML:

- almost complete rewrite of wxHtmlHelpController,
  including faster search, bookmarks, printing, setup dialog
  and cross-platform binary compatible .cached files for faster 
  loading of large helpbooks, case insensitive search
  splitted into 3 parts: wxHtmlHelpData, Frame and Controller
- added support for charsets and <meta> tag
- added support for font faces and justified paragraphs,
  taken some steps to prepare wxHTML for frames
- added dynamic pushing/poping of wxHtmlParser tag handlers
- improved HTML printing
- added extensive table of HTML characters substitutions (&nbsp; etc.)
- fixed wxHtmlWindow flickering, several minor bugfixes
- added some tags: <address>, <code>, <kbd>, <samp>, <small>, <big>,
  fixed handling of relative and absolute font sizes in <font size>


NOTE: for changes after wxWindows 2.1.0 b4, please see the CVS
change log.

2.1.0, b4, May 9th 1999
-----------------------

wxGTK:

- JPEG support added.
- Many fixes and changes not thought worth mentioning in this file :-)

wxMSW:

- wxNotebook changes: can add image only; wxNB_FIXEDWIDTH added;
  SetTabSize added.
- JPEG support added.